--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       font-size: 24px;
       padding: 10px 20px;
       cursor: pointer;
+      z-index: 10;
     }
   </style>
 </head>
@@ -21,55 +22,67 @@
   <script src="https://cdn.jsdelivr.net/npm/three@0.161.0/build/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.161.0/examples/js/controls/PointerLockControls.js"></script>
   <script>
-    const scene = new THREE.Scene();
-    scene.fog = new THREE.Fog(0xffffcc, 5, 50);
-
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 1000);
-    const renderer = new THREE.WebGLRenderer();
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
-
-    // Lighting
-    const light = new THREE.PointLight(0xffffaa, 1, 100);
-    light.position.set(0, 10, 0);
-    scene.add(light);
-
-    // Floor and wall texture
-    const wallMaterial = new THREE.MeshBasicMaterial({ color: 0xffff88 });
-    const floorMaterial = new THREE.MeshBasicMaterial({ color: 0xffee88 });
-
-    // Build a maze room grid
-    for (let x = -50; x <= 50; x += 10) {
-      for (let z = -50; z <= 50; z += 10) {
-        if (Math.random() > 0.6) {
-          const wall = new THREE.Mesh(new THREE.BoxGeometry(10, 10, 1), wallMaterial);
-          wall.position.set(x, 5, z);
-          wall.rotation.y = Math.random() > 0.5 ? 0 : Math.PI / 2;
-          scene.add(wall);
-        }
-      }
-    }
-
-    // Floor
-    const floor = new THREE.Mesh(new THREE.PlaneGeometry(200, 200), floorMaterial);
-    floor.rotation.x = -Math.PI / 2;
-    scene.add(floor);
-
-    // Controls
-    const controls = new THREE.PointerLockControls(camera, document.body);
-
-    document.getElementById('startBtn').addEventListener('click', () => {
-      controls.lock();
-      document.getElementById('startBtn').style.display = 'none';
-    });
-
-    // Movement
-    const velocity = new THREE.Vector3();
-    const direction = new THREE.Vector3();
+    let camera, scene, renderer, controls;
+    let velocity = new THREE.Vector3();
+    let direction = new THREE.Vector3();
     const keys = {};
 
-    document.addEventListener('keydown', e => keys[e.code] = true);
-    document.addEventListener('keyup', e => keys[e.code] = false);
+    init();
+    animate();
+
+    function init() {
+      scene = new THREE.Scene();
+      scene.fog = new THREE.Fog(0xffffcc, 5, 50);
+
+      camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 1000);
+      renderer = new THREE.WebGLRenderer();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      document.body.appendChild(renderer.domElement);
+
+      // Light
+      const light = new THREE.PointLight(0xffffaa, 1, 100);
+      light.position.set(0, 10, 0);
+      scene.add(light);
+
+      // Walls
+      const wallMaterial = new THREE.MeshBasicMaterial({ color: 0xffff88 });
+      for (let x = -50; x <= 50; x += 10) {
+        for (let z = -50; z <= 50; z += 10) {
+          if (Math.random() > 0.6) {
+            const wall = new THREE.Mesh(new THREE.BoxGeometry(10, 10, 1), wallMaterial);
+            wall.position.set(x, 5, z);
+            wall.rotation.y = Math.random() > 0.5 ? 0 : Math.PI / 2;
+            scene.add(wall);
+          }
+        }
+      }
+
+      // Floor
+      const floorMaterial = new THREE.MeshBasicMaterial({ color: 0xffee88 });
+      const floor = new THREE.Mesh(new THREE.PlaneGeometry(200, 200), floorMaterial);
+      floor.rotation.x = -Math.PI / 2;
+      scene.add(floor);
+
+      // Controls setup after user gesture
+      controls = new THREE.PointerLockControls(camera, document.body);
+      document.getElementById('startBtn').addEventListener('click', () => {
+        controls.lock();
+      });
+
+      controls.addEventListener('lock', () => {
+        document.getElementById('startBtn').style.display = 'none';
+      });
+
+      controls.addEventListener('unlock', () => {
+        document.getElementById('startBtn').style.display = 'block';
+      });
+
+      scene.add(controls.getObject());
+
+      // Keyboard events
+      document.addEventListener('keydown', (e) => keys[e.code] = true);
+      document.addEventListener('keyup', (e) => keys[e.code] = false);
+    }
 
     function animate() {
       requestAnimationFrame(animate);
@@ -87,8 +100,6 @@
 
       renderer.render(scene, camera);
     }
-
-    animate();
   </script>
 </body>
 </html>
