--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Backrooms 3D</title>
   <style>
-    body { margin: 0; overflow: hidden; background: #000; }
+    body { margin: 0; overflow: hidden; }
     canvas { display: block; }
     #startBtn {
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+      padding: 20px 40px;
       font-size: 24px;
-      padding: 10px 20px;
+      background: #ffd;
+      border: 2px solid #aaa;
       cursor: pointer;
-      z-index: 10;
+      z-index: 999;
     }
   </style>
 </head>
 <body>
   <button id="startBtn">Enter the Backrooms</button>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.161.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three@0.161.0/examples/js/controls/PointerLockControls.js"></script>
+
+  <!-- ✅ Working script links -->
+  <script src="https://unpkg.com/three@0.161.0/build/three.min.js"></script>
+  <script src="https://unpkg.com/three@0.161.0/examples/js/controls/PointerLockControls.js"></script>
+
   <script>
     let camera, scene, renderer, controls;
-    let velocity = new THREE.Vector3();
-    let direction = new THREE.Vector3();
     const keys = {};
 
     init();
@@ -35,6 +39,8 @@
       scene.fog = new THREE.Fog(0xffffcc, 5, 50);
 
       camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 1000);
+      camera.position.y = 5;
+
       renderer = new THREE.WebGLRenderer();
       renderer.setSize(window.innerWidth, window.innerHeight);
       document.body.appendChild(renderer.domElement);
@@ -44,42 +50,44 @@
       light.position.set(0, 10, 0);
       scene.add(light);
 
-      // Walls
-      const wallMaterial = new THREE.MeshBasicMaterial({ color: 0xffff88 });
-      for (let x = -50; x <= 50; x += 10) {
-        for (let z = -50; z <= 50; z += 10) {
-          if (Math.random() > 0.6) {
-            const wall = new THREE.Mesh(new THREE.BoxGeometry(10, 10, 1), wallMaterial);
-            wall.position.set(x, 5, z);
-            wall.rotation.y = Math.random() > 0.5 ? 0 : Math.PI / 2;
-            scene.add(wall);
-          }
-        }
-      }
-
       // Floor
       const floorMaterial = new THREE.MeshBasicMaterial({ color: 0xffee88 });
-      const floor = new THREE.Mesh(new THREE.PlaneGeometry(200, 200), floorMaterial);
+      const floor = new THREE.Mesh(new THREE.PlaneGeometry(500, 500), floorMaterial);
       floor.rotation.x = -Math.PI / 2;
       scene.add(floor);
 
-      // Controls setup after user gesture
+      // Random walls
+      const wallMaterial = new THREE.MeshBasicMaterial({ color: 0xffff88 });
+      for (let i = 0; i < 150; i++) {
+        const wall = new THREE.Mesh(new THREE.BoxGeometry(10, 10, 1), wallMaterial);
+        wall.position.set(
+          Math.floor(Math.random() * 100 - 50) * 5,
+          5,
+          Math.floor(Math.random() * 100 - 50) * 5
+        );
+        wall.rotation.y = Math.random() > 0.5 ? 0 : Math.PI / 2;
+        scene.add(wall);
+      }
+
+      // Controls
       controls = new THREE.PointerLockControls(camera, document.body);
-      document.getElementById('startBtn').addEventListener('click', () => {
+
+      const button = document.getElementById('startBtn');
+      button.addEventListener('click', () => {
         controls.lock();
       });
 
       controls.addEventListener('lock', () => {
-        document.getElementById('startBtn').style.display = 'none';
+        button.style.display = 'none';
       });
 
       controls.addEventListener('unlock', () => {
-        document.getElementById('startBtn').style.display = 'block';
+        button.style.display = 'block';
       });
 
       scene.add(controls.getObject());
 
-      // Keyboard events
+      // Movement
       document.addEventListener('keydown', (e) => keys[e.code] = true);
       document.addEventListener('keyup', (e) => keys[e.code] = false);
     }
@@ -87,19 +95,22 @@
     function animate() {
       requestAnimationFrame(animate);
 
-      direction.z = Number(keys['KeyW']) - Number(keys['KeyS']);
-      direction.x = Number(keys['KeyD']) - Number(keys['KeyA']);
-      direction.normalize();
-
       if (controls.isLocked) {
-        velocity.z = direction.z * 0.1;
-        velocity.x = direction.x * 0.1;
-        controls.moveRight(velocity.x);
-        controls.moveForward(velocity.z);
+        let moveSpeed = 0.2;
+        if (keys['KeyW']) controls.moveForward(moveSpeed);
+        if (keys['KeyS']) controls.moveForward(-moveSpeed);
+        if (keys['KeyA']) controls.moveRight(-moveSpeed);
+        if (keys['KeyD']) controls.moveRight(moveSpeed);
       }
 
       renderer.render(scene, camera);
     }
+
+    window.addEventListener('resize', () => {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    });
   </script>
 </body>
 </html>
