--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <body>
   <button id="startBtn">Enter the Backrooms</button>
 
-  <!-- ✅ Fixed version with classic build path -->
-  <script src="https://unpkg.com/three@0.150.1/build/three.min.js"></script>
-  <script src="https://unpkg.com/three@0.150.1/examples/js/controls/PointerLockControls.js"></script>
+  <!-- Local file paths -->
+  <script src="three.min.js"></script>
+  <script src="PointerLockControls.js"></script>
 
   <script>
     let camera, scene, renderer, controls;
@@ -114,4 +114,3 @@
   </script>
 </body>
 </html>
-
