--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </style>
 </head>
 <body>
-  <!-- No button needed, game will load immediately -->
-  
-  <!-- Local file paths -->
-  <script src="three.min.js"></script>
-  <script src="PointerLockControls.js"></script>
+  <!-- Load Three.js -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.161.0/build/three.min.js"></script>
+
+  <!-- Load PointerLockControls -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.161.0/examples/js/controls/PointerLockControls.js"></script>
 
   <script>
     let camera, scene, renderer, controls;
@@ -22,76 +22,67 @@
     init();
     animate();
 
+    // Initialize the scene
     function init() {
+      console.log("Initializing the game...");
+
+      // Create the scene
       scene = new THREE.Scene();
       scene.fog = new THREE.Fog(0xffffcc, 5, 50);
 
+      // Create the camera
       camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 1000);
       camera.position.y = 5;
 
+      // Create the renderer
       renderer = new THREE.WebGLRenderer();
       renderer.setSize(window.innerWidth, window.innerHeight);
       document.body.appendChild(renderer.domElement);
 
-      // Light
+      console.log("Scene and camera set up");
+
+      // Add a simple cube to the scene for debugging
+      const geometry = new THREE.BoxGeometry(1, 1, 1);
+      const material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
+      const cube = new THREE.Mesh(geometry, material);
+      scene.add(cube);
+
+      console.log("Cube added");
+
+      // Create lights
       const light = new THREE.PointLight(0xffffaa, 1, 100);
       light.position.set(0, 10, 0);
       scene.add(light);
 
-      // Floor
-      const floorMaterial = new THREE.MeshBasicMaterial({ color: 0xffee88 });
-      const floor = new THREE.Mesh(new THREE.PlaneGeometry(500, 500), floorMaterial);
-      floor.rotation.x = -Math.PI / 2;
-      scene.add(floor);
-
-      // Random walls
-      const wallMaterial = new THREE.MeshBasicMaterial({ color: 0xffff88 });
-      for (let i = 0; i < 150; i++) {
-        const wall = new THREE.Mesh(new THREE.BoxGeometry(10, 10, 1), wallMaterial);
-        wall.position.set(
-          Math.floor(Math.random() * 100 - 50) * 5,
-          5,
-          Math.floor(Math.random() * 100 - 50) * 5
-        );
-        wall.rotation.y = Math.random() > 0.5 ? 0 : Math.PI / 2;
-        scene.add(wall);
-      }
-
-      // Controls
+      // Setup pointer lock controls
       controls = new THREE.PointerLockControls(camera, document.body);
-
-      // Try to lock the pointer as soon as the page is loaded
       document.body.requestPointerLock = document.body.requestPointerLock || document.body.mozRequestPointerLock;
 
-      // Automatically request pointer lock when the page is clicked
+      // Automatically request pointer lock on page click
       document.body.addEventListener('click', () => {
         if (document.body.requestPointerLock) {
           document.body.requestPointerLock();
         }
       });
 
-      document.addEventListener('pointerlockchange', onPointerLockChange, false);
-      document.addEventListener('mozpointerlockchange', onPointerLockChange, false);
+      console.log("Pointer lock event added");
 
-      function onPointerLockChange() {
-        if (document.pointerLockElement === document.body || document.mozPointerLockElement === document.body) {
-          console.log("Pointer locked");
-        } else {
-          console.log("Pointer unlocked");
-        }
-      }
-
+      // Add the controls object to the scene
       scene.add(controls.getObject());
 
-      // Movement
+      // Handle keyboard input
       document.addEventListener('keydown', (e) => keys[e.code] = true);
       document.addEventListener('keyup', (e) => keys[e.code] = false);
+
+      console.log("Game initialized");
     }
 
+    // Animate the scene
     function animate() {
       requestAnimationFrame(animate);
 
       if (controls.isLocked) {
+        // Move the player based on keyboard input
         let moveSpeed = 0.2;
         if (keys['KeyW']) controls.moveForward(moveSpeed);
         if (keys['KeyS']) controls.moveForward(-moveSpeed);
@@ -102,11 +93,24 @@
       renderer.render(scene, camera);
     }
 
+    // Handle resizing the window
     window.addEventListener('resize', () => {
       camera.aspect = window.innerWidth / window.innerHeight;
       camera.updateProjectionMatrix();
       renderer.setSize(window.innerWidth, window.innerHeight);
     });
+
+    // Handle pointer lock change event
+    document.addEventListener('pointerlockchange', onPointerLockChange, false);
+    document.addEventListener('mozpointerlockchange', onPointerLockChange, false);
+
+    function onPointerLockChange() {
+      if (document.pointerLockElement === document.body || document.mozPointerLockElement === document.body) {
+        console.log("Pointer locked");
+      } else {
+        console.log("Pointer unlocked");
+      }
+    }
   </script>
 </body>
 </html>
