--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Backrooms 3D</title>
+  <title>Spinning Cube</title>
   <style>
     body { margin: 0; overflow: hidden; }
     canvas { display: block; }
@@ -16,7 +16,7 @@
   <script src="https://cdn.jsdelivr.net/npm/three@0.161.0/examples/js/controls/PointerLockControls.js"></script>
 
   <script>
-    let camera, scene, renderer, controls;
+    let camera, scene, renderer, controls, cube;
     const keys = {};
 
     init();
@@ -44,7 +44,7 @@
       // Add a simple cube to the scene for debugging
       const geometry = new THREE.BoxGeometry(1, 1, 1);
       const material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
-      const cube = new THREE.Mesh(geometry, material);
+      cube = new THREE.Mesh(geometry, material);
       scene.add(cube);
 
       console.log("Cube added");
@@ -81,8 +81,12 @@
     function animate() {
       requestAnimationFrame(animate);
 
+      // Rotate the cube
+      cube.rotation.x += 0.01;
+      cube.rotation.y += 0.01;
+
+      // Move the player based on keyboard input (if pointer is locked)
       if (controls.isLocked) {
-        // Move the player based on keyboard input
         let moveSpeed = 0.2;
         if (keys['KeyW']) controls.moveForward(moveSpeed);
         if (keys['KeyS']) controls.moveForward(-moveSpeed);
