--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
   </style>
 </head>
 <body>
-<div id="instructions">
-  Click to Start
-</div>
+<div id="instructions">Click to Start</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/controls/PointerLockControls.js"></script>
@@ -39,7 +37,7 @@
   var light = new THREE.HemisphereLight(0xffffbb, 0x080820, 1);
   scene.add(light);
 
-  // Controls
+  // Pointer Lock Controls
   var controls = new THREE.PointerLockControls(camera, document.body);
   var instructions = document.getElementById('instructions');
 
@@ -59,13 +57,22 @@
 
   // Textures
   var textureLoader = new THREE.TextureLoader();
-  var wallTexture = textureLoader.load('https://i.imgur.com/O7bPBhh.jpg'); // Example wall texture
-  var floorTexture = textureLoader.load('https://i.imgur.com/GpT3KQm.jpg'); // Example floor texture
+  var wallTexture = textureLoader.load('https://i.imgur.com/O7bPBhh.jpg');
+  var floorTexture = textureLoader.load('https://i.imgur.com/GpT3KQm.jpg');
+
+  // List of collision boxes
+  var collisionBoxes = [];
 
   function createWall(width, height, depth, x, y, z, material) {
     var geometry = new THREE.BoxGeometry(width, height, depth);
     var mesh = new THREE.Mesh(geometry, material);
     mesh.position.set(x, y, z);
+    scene.add(mesh);
+
+    // Add collision box
+    var box = new THREE.Box3().setFromObject(mesh);
+    collisionBoxes.push(box);
+
     return mesh;
   }
 
@@ -73,30 +80,26 @@
     var wallMaterial = new THREE.MeshBasicMaterial({ map: wallTexture });
     var floorMaterial = new THREE.MeshBasicMaterial({ map: floorTexture });
 
-    var floor = createWall(20, 1, 20, 0, 0, 0, floorMaterial);
-    var leftWall = createWall(1, 5, 20, -10, 2.5, 0, wallMaterial);
-    var rightWall = createWall(1, 5, 20, 10, 2.5, 0, wallMaterial);
-    var ceiling = createWall(20, 1, 20, 0, 5, 0, wallMaterial);
-
-    scene.add(floor, leftWall, rightWall, ceiling);
+    createWall(20, 1, 20, 0, 0, 0, floorMaterial); // Floor
+    createWall(1, 5, 20, -10, 2.5, 0, wallMaterial); // Left Wall
+    createWall(1, 5, 20, 10, 2.5, 0, wallMaterial); // Right Wall
+    createWall(20, 1, 20, 0, 5, 0, wallMaterial); // Ceiling
   }
 
   function generateRandomHallway() {
-    var randomX = (Math.floor(Math.random() * 5) - 2) * 20;
-    var randomZ = (Math.floor(Math.random() * 5) - 2) * 20;
-
     var wallMaterial = new THREE.MeshBasicMaterial({ map: wallTexture });
     var floorMaterial = new THREE.MeshBasicMaterial({ map: floorTexture });
 
-    var floor = createWall(20, 1, 20, randomX, 0, randomZ, floorMaterial);
-    var leftWall = createWall(1, 5, 20, randomX - 10, 2.5, randomZ, wallMaterial);
-    var rightWall = createWall(1, 5, 20, randomX + 10, 2.5, randomZ, wallMaterial);
-    var ceiling = createWall(20, 1, 20, randomX, 5, randomZ, wallMaterial);
+    var randomX = (Math.floor(Math.random() * 5) - 2) * 20;
+    var randomZ = (Math.floor(Math.random() * 5) - 2) * 20;
 
-    scene.add(floor, leftWall, rightWall, ceiling);
+    createWall(20, 1, 20, randomX, 0, randomZ, floorMaterial); // Floor
+    createWall(1, 5, 20, randomX - 10, 2.5, randomZ, wallMaterial); // Left Wall
+    createWall(1, 5, 20, randomX + 10, 2.5, randomZ, wallMaterial); // Right Wall
+    createWall(20, 1, 20, randomX, 5, randomZ, wallMaterial); // Ceiling
   }
 
-  // Movement variables
+  // Movement
   var moveForward = false;
   var moveBackward = false;
   var moveLeft = false;
@@ -121,10 +124,22 @@
     }
   });
 
-  // Main animate loop
+  // Check for collisions
+  function checkCollision(position) {
+    var playerBox = new THREE.Box3().setFromCenterAndSize(position, new THREE.Vector3(1, 3, 1));
+
+    for (var i = 0; i < collisionBoxes.length; i++) {
+      if (playerBox.intersectsBox(collisionBoxes[i])) {
+        return true;
+      }
+    }
+    return false;
+  }
+
+  // Animate
   var clock = new THREE.Clock();
   createInitialHallway();
-  setInterval(generateRandomHallway, 3000); // New hallway every 3 seconds
+  setInterval(generateRandomHallway, 3000);
 
   function animate() {
     requestAnimationFrame(animate);
@@ -140,8 +155,18 @@
     if (moveLeft) velocity.x -= speed * delta;
     if (moveRight) velocity.x += speed * delta;
 
+    var oldPosition = controls.getObject().position.clone();
+
     controls.moveRight(-velocity.x * delta);
     controls.moveForward(-velocity.z * delta);
+
+    // After moving, check collisions
+    if (checkCollision(controls.getObject().position)) {
+      controls.getObject().position.copy(oldPosition); // Reset position if collided
+    }
+
+    // Keep player at constant height (no falling)
+    controls.getObject().position.y = 1.6;
 
     renderer.render(scene, camera);
   }
