--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Backrooms 3D</title>
   <style>
-    body { margin: 0; overflow: hidden; background: #000; }
+    body { margin: 0; overflow: hidden; background: black; }
     #instructions {
       position: absolute;
       top: 50%;
       width: 100%;
       text-align: center;
+      font-size: 24px;
       color: white;
       font-family: sans-serif;
-      font-size: 24px;
-      user-select: none;
       transform: translateY(-50%);
+      user-select: none;
     }
   </style>
 </head>
@@ -26,9 +26,9 @@
 <script src="https://cdn.jsdelivr.net/npm/three@0.128/examples/js/controls/PointerLockControls.js"></script>
 
 <script>
+  // Setup scene, camera, renderer
   var scene = new THREE.Scene();
-  var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-
+  var camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
   var renderer = new THREE.WebGLRenderer();
   renderer.setSize(window.innerWidth, window.innerHeight);
   document.body.appendChild(renderer.domElement);
@@ -55,12 +55,14 @@
 
   scene.add(controls.getObject());
 
+  controls.getObject().position.set(0, 5, 0); // Spawn higher, above floor
+
   // Textures
   var textureLoader = new THREE.TextureLoader();
   var wallTexture = textureLoader.load('https://i.imgur.com/O7bPBhh.jpg');
   var floorTexture = textureLoader.load('https://i.imgur.com/GpT3KQm.jpg');
 
-  // List of collision boxes
+  // Collision boxes
   var collisionBoxes = [];
 
   function createWall(width, height, depth, x, y, z, material) {
@@ -69,42 +71,50 @@
     mesh.position.set(x, y, z);
     scene.add(mesh);
 
-    // Add collision box
     var box = new THREE.Box3().setFromObject(mesh);
     collisionBoxes.push(box);
-
-    return mesh;
   }
 
-  function createInitialHallway() {
+  function createInitialRoom() {
     var wallMaterial = new THREE.MeshBasicMaterial({ map: wallTexture });
     var floorMaterial = new THREE.MeshBasicMaterial({ map: floorTexture });
 
     createWall(20, 1, 20, 0, 0, 0, floorMaterial); // Floor
     createWall(1, 5, 20, -10, 2.5, 0, wallMaterial); // Left Wall
     createWall(1, 5, 20, 10, 2.5, 0, wallMaterial); // Right Wall
+    createWall(20, 5, 1, 0, 2.5, -10, wallMaterial); // Back Wall
+    createWall(20, 5, 1, 0, 2.5, 10, wallMaterial); // Front Wall
     createWall(20, 1, 20, 0, 5, 0, wallMaterial); // Ceiling
   }
 
-  function generateRandomHallway() {
+  function generateRandomRoom() {
     var wallMaterial = new THREE.MeshBasicMaterial({ map: wallTexture });
     var floorMaterial = new THREE.MeshBasicMaterial({ map: floorTexture });
 
     var randomX = (Math.floor(Math.random() * 5) - 2) * 20;
     var randomZ = (Math.floor(Math.random() * 5) - 2) * 20;
 
-    createWall(20, 1, 20, randomX, 0, randomZ, floorMaterial); // Floor
-    createWall(1, 5, 20, randomX - 10, 2.5, randomZ, wallMaterial); // Left Wall
-    createWall(1, 5, 20, randomX + 10, 2.5, randomZ, wallMaterial); // Right Wall
-    createWall(20, 1, 20, randomX, 5, randomZ, wallMaterial); // Ceiling
+    createWall(20, 1, 20, randomX, 0, randomZ, floorMaterial);
+    createWall(1, 5, 20, randomX - 10, 2.5, randomZ, wallMaterial);
+    createWall(1, 5, 20, randomX + 10, 2.5, randomZ, wallMaterial);
+    createWall(20, 5, 1, randomX, 2.5, randomZ - 10, wallMaterial);
+    createWall(20, 5, 1, randomX, 2.5, randomZ + 10, wallMaterial);
+    createWall(20, 1, 20, randomX, 5, randomZ, wallMaterial);
   }
+
+  createInitialRoom();
+  setInterval(generateRandomRoom, 3000);
 
   // Movement
   var moveForward = false;
   var moveBackward = false;
   var moveLeft = false;
   var moveRight = false;
+  var canJump = false;
+
   var velocity = new THREE.Vector3();
+  var gravity = 30;
+  var isOnGround = false;
 
   document.addEventListener('keydown', function(event) {
     switch (event.code) {
@@ -112,6 +122,11 @@
       case 'KeyS': moveBackward = true; break;
       case 'KeyA': moveLeft = true; break;
       case 'KeyD': moveRight = true; break;
+      case 'Space':
+        if (isOnGround) {
+          velocity.y += 10; // Jump
+        }
+        break;
     }
   });
 
@@ -124,10 +139,11 @@
     }
   });
 
-  // Check for collisions
   function checkCollision(position) {
-    var playerBox = new THREE.Box3().setFromCenterAndSize(position, new THREE.Vector3(1, 3, 1));
-
+    var playerBox = new THREE.Box3().setFromCenterAndSize(
+      position.clone().add(new THREE.Vector3(0, 1.5, 0)), // shifted up
+      new THREE.Vector3(1, 3, 1) // width, height, depth
+    );
     for (var i = 0; i < collisionBoxes.length; i++) {
       if (playerBox.intersectsBox(collisionBoxes[i])) {
         return true;
@@ -136,15 +152,15 @@
     return false;
   }
 
-  // Animate
   var clock = new THREE.Clock();
-  createInitialHallway();
-  setInterval(generateRandomHallway, 3000);
 
   function animate() {
     requestAnimationFrame(animate);
 
     var delta = clock.getDelta();
+
+    // Apply gravity
+    velocity.y -= gravity * delta;
     velocity.x -= velocity.x * 10.0 * delta;
     velocity.z -= velocity.z * 10.0 * delta;
 
@@ -157,16 +173,23 @@
 
     var oldPosition = controls.getObject().position.clone();
 
-    controls.moveRight(-velocity.x * delta);
-    controls.moveForward(-velocity.z * delta);
+    controls.getObject().position.x += velocity.x * delta;
+    controls.getObject().position.y += velocity.y * delta;
+    controls.getObject().position.z += velocity.z * delta;
 
-    // After moving, check collisions
     if (checkCollision(controls.getObject().position)) {
-      controls.getObject().position.copy(oldPosition); // Reset position if collided
+      controls.getObject().position.copy(oldPosition);
+      velocity.y = 0;
+      isOnGround = true;
+    } else {
+      isOnGround = false;
     }
 
-    // Keep player at constant height (no falling)
-    controls.getObject().position.y = 1.6;
+    if (controls.getObject().position.y < 1.6) {
+      controls.getObject().position.y = 1.6;
+      isOnGround = true;
+      velocity.y = 0;
+    }
 
     renderer.render(scene, camera);
   }
