--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
   // Textures (Backrooms-style)
   var textureLoader = new THREE.TextureLoader();
-  var wallTexture = textureLoader.load('https://upload.wikimedia.org/wikipedia/commons/6/68/Backrooms_wall_texture.jpg');
-  var floorTexture = textureLoader.load('https://upload.wikimedia.org/wikipedia/commons/e/e5/Dirty_carpet_texture.jpg');
+  var wallTexture = textureLoader.load('https://github.com/Loadbit6/Backrooms/blob/cf8b91c3f1be68357d81872c47d75e3acda8fd00/textures/tex.jpeg');
+  var floorTexture = textureLoader.load('https://upload.wikimedia.org/wikipedia/commons/6/68/Backrooms_wall_texture.jpg');
 
   // Collision boxes
   var collisionBoxes = [];
